objects/Accreditation__c.object
<CustomObject>
    <fields>
        <fullName>Accrediation_Comments__c</fullName>
        <inlineHelpText>Comments in relation to the accrediation</inlineHelpText>
        <label>Accrediation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Accredited_On__c</fullName>
        <inlineHelpText>Enter the date of the Accreditation</inlineHelpText>
        <label>Accredited On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Accredited_for__c</fullName>
        <inlineHelpText>Hold Ctrl to select multiple options</inlineHelpText>
        <label>Accredited for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-faciliation</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>EBA Consulting</fullName>
                </value>
                <value>
                    <fullName>In-house training</fullName>
                </value>
                <value>
                    <fullName>Master Trainer consulting</fullName>
                </value>
                <value>
                    <fullName>Master Trainer training</fullName>
                </value>
                <value>
                    <fullName>Master Trainer video</fullName>
                </value>
                <value>
                    <fullName>Open Course Level 1</fullName>
                </value>
                <value>
                    <fullName>Open Course Level 2</fullName>
                </value>
                <value>
                    <fullName>Open Course Level 3</fullName>
                </value>
                <value>
                    <fullName>Refresher</fullName>
                </value>
                <value>
                    <fullName>Video practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_for__c</fullName>
        <label>Approved for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-faciliation</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>EBA Consulting</fullName>
                </value>
                <value>
                    <fullName>In-house training</fullName>
                </value>
                <value>
                    <fullName>Master Trainer consulting</fullName>
                </value>
                <value>
                    <fullName>Master Trainer training</fullName>
                </value>
                <value>
                    <fullName>Open Course Level 1</fullName>
                </value>
                <value>
                    <fullName>Open Course Level 2</fullName>
                </value>
                <value>
                    <fullName>Open Course Level 3</fullName>
                </value>
                <value>
                    <fullName>Video practitioner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certificate_Sent_On__c</fullName>
        <inlineHelpText>Enter Date certificate has been sent</inlineHelpText>
        <label>Certificate Sent On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Completed_training_on__c</fullName>
        <label>Completed training on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <inlineHelpText>Please enter the contact Accredited</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accreditations</relationshipLabel>
        <relationshipName>Accreditations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Master_trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master trainer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accreditations (Master trainer)</relationshipLabel>
        <relationshipName>Accreditations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Network_Member_Status__c</fullName>
        <description>This is a formula from the Contacts Network Member Status and can only be updated on the contact page</description>
        <formula>CASE(Contact__r.Network_Member_status__c,
&quot;Active&quot;,&quot;Active&quot;, 
&quot;Inactive&quot;, &quot;Inactive&quot;,
&quot;Prospective&quot;,&quot;Prospective&quot;,
&quot;null&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a formula from the Contacts Network Member Status and can only be updated on the contact page</inlineHelpText>
        <label>Network Member Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <label>Accredited</label>
                </value>
                <value>
                    <fullName>Attending CDP-C</fullName>
                </value>
                <value>
                    <fullName>Attending CDP-F</fullName>
                </value>
                <value>
                    <fullName>Attending CDP-V</fullName>
                </value>
                <value>
                    <fullName>Attending ENS Course</fullName>
                </value>
                <value>
                    <fullName>Attending WLD-F</fullName>
                </value>
                <value>
                    <fullName>Running practice workshops</fullName>
                </value>
                <value>
                    <fullName>Working as Co-Facilitator</fullName>
                </value>
                <value>
                    <fullName>Working on Marketing plan</fullName>
                </value>
                <value>
                    <fullName>Working with clients</fullName>
                </value>
                <value>
                    <fullName>Accreditation Suspended</fullName>
                </value>
                <value>
                    <fullName>Former Network Member</fullName>
                </value>
                <value>
                    <fullName>Former In-house Trainer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Accreditation</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Accreditation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accreditations</pluralLabel>
    <recordTypes>
        <fullName>CDP_C</fullName>
        <active>true</active>
        <label>CDP-C</label>
    </recordTypes>
    <recordTypes>
        <fullName>CDP_F</fullName>
        <active>true</active>
        <label>CDP-F</label>
    </recordTypes>
    <recordTypes>
        <fullName>CDP_V</fullName>
        <active>true</active>
        <label>CDP-V</label>
    </recordTypes>
    <recordTypes>
        <fullName>WLD</fullName>
        <active>true</active>
        <label>WLD</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>